Fix outliner gap

--- a/mainpage.css
+++ b/mainpage.css
@@ -98,14 +98,14 @@ body {
 
 #about_outliner_1{
     position: absolute;
-    left: 0; top: 0;
+    left: 2px; top: 0;
     width: 60px; height: 0px;
     border-top: 3px solid red;
 }
 
 #about_outliner_2{
     position: absolute;
-    left: 0; top: 2px;
+    left: 0; top: 0px;
     width: 0px; height: 60px;
     border-right: 3px solid red;
 }
